--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <a class="nav-link" href="index.html">Start here <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="about.html"> Know More</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="chocolate.html">Chocolates</a>
