--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <a class="nav-link" href="about.html"> Know More</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="chocolate.html">Chocolates</a>
+                  <a class="nav-link" href="chocolate.html">Choco Bar</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Testimonial</a>
